<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBC02D"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="258dp"
        android:layout_height="52dp"
        android:background="#03A9F4"
        android:text="@string/signup"
        android:textColor="#E91E63"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword"
        app:layout_constraintVertical_bias="0.691" />

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="235dp"
        android:layout_height="176dp"
        android:fontFamily="cursive"
        android:text="@string/welcome"
        android:textColor="#673AB7"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082"
        tools:text="@string/welcome" />

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#15E1B8"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading"
        app:layout_constraintVertical_bias="0.114" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#15E1B8"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginEmail"
        app:layout_constraintVertical_bias="0.221" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#43A047"
        android:text="@string/login"
        android:textColor="#630A0A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword"
        app:layout_constraintVertical_bias="0.273"
        tools:text="@string/login" />
</androidx.constraintlayout.widget.ConstraintLayout>